--- a/connect_four/src/index.css
+++ b/connect_four/src/index.css
@@ -1,6 +1,16 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
+  background: #22248f;
+  color: yellow;
+}
+
+a {
+  color: yellow;
+}
+
+a:hover {
+  color: red;
 }
 
 ol, ul {
@@ -19,17 +29,53 @@ ol, ul {
 
 .square {
   background: #fff;
+  color: #00b3b3;
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 32px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  line-height: 50px;
+  height: 50px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 50px;
+  vertical-align: middle;
+}
+
+.square:hover{
+  background: yellow;
+  color: #00b3b3;
+  border: 1px solid #999;
+  float: left;
+  font-size: 32px;
+  font-weight: bold;
+  line-height: 50px;
+  height: 50px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 50px;
+  vertical-align: middle;
+}
+
+.square:visited {
+  background: #dd5;
+  color: #00b3b3;
+  border: 1px solid #999;
+  float: left;
+  font-size: 32px;
+  font-weight: bold;
+  line-height: 50px;
+  height: 50px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 50px;
+  vertical-align: middle;
 }
 
 .square:focus {
