--- a/connect_four/src/index.css
+++ b/connect_four/src/index.css
@@ -1,6 +1,6 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  margin: 10px;
   background: #22248f;
   color: yellow;
 }
@@ -32,15 +32,15 @@ ol, ul {
   color: #00b3b3;
   border: 1px solid #999;
   float: left;
-  font-size: 32px;
+  font-size: 50px;
   font-weight: bold;
-  line-height: 50px;
-  height: 50px;
+  line-height: 80px;
+  height: 80px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 50px;
+  width: 80px;
   vertical-align: middle;
 }
 
@@ -49,32 +49,15 @@ ol, ul {
   color: #00b3b3;
   border: 1px solid #999;
   float: left;
-  font-size: 32px;
+  font-size: 50px;
   font-weight: bold;
-  line-height: 50px;
-  height: 50px;
+  line-height: 80px;
+  height: 80px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 50px;
-  vertical-align: middle;
-}
-
-.square:visited {
-  background: #dd5;
-  color: #00b3b3;
-  border: 1px solid #999;
-  float: left;
-  font-size: 32px;
-  font-weight: bold;
-  line-height: 50px;
-  height: 50px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 50px;
+  width: 80px;
   vertical-align: middle;
 }
 
@@ -89,6 +72,15 @@ ol, ul {
 .game {
   display: flex;
   flex-direction: row;
+
+  margin: 0;
+  background: green;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  text-align: left;
 }
 
 .game-info {
